--- a/scss/_includes.scss
+++ b/scss/_includes.scss
@@ -7,6 +7,11 @@ $mainFont: 'Raleway', Arial, sans-serif;
 $bodyFont: 'Helvetica', Arial, sans-serif;
 
 
+$gray: #929292;
+$light-gray: #eee;
+$dark-gray: #555;
+$black: #000;
+
 
 /* REGULAR MIXINS
 ============================================= */
