--- a/scss/_carousel.scss
+++ b/scss/_carousel.scss
@@ -1,25 +1,104 @@
-.carousel {
+.frontpageCarousel {
   height: 500px;
   margin-top: 110px;
+
+  @include desktop-and-under {
+    margin-top: 80px;
+  }
+
+  .carousel-inner>.item>img {
+    height: 500px;
+    width: 100%;
+    object-fit: cover;
+    object-position: 0 0;
+  }
+
+  // .carousel .carousel-control {
+  //   opacity: 0;
+  //   @include transition(all ease-out .5s);
+  // }
+  //
+  // .carousel:hover .carousel-control {
+  //   opacity: 1;
+  //   @include transition(all ease-in .5s);
+  // }
+
+  .carousel-control.left, .carousel-control.right {
+      background-image: none;
+      opacity: 0;
+      @include transition(all ease-out .5s);
+  }
+
+  &:hover {
+    .carousel-control.left, .carousel-control.right {
+      opacity: 1;
+      @include transition(all ease-in .5s);
+    }
+  }
 }
 
-.carousel-inner>.item>img {
+.eventsCarousel {
+  margin-bottom: 100px;
   height: 500px;
-  width: 100%;
-  object-fit: cover;
-  object-position: 0 0;
-}
 
-.carousel .carousel-control {
-  opacity: 0;
-  @include transition(all ease-out .5s);
-}
+  .carousel-inner {
+    overflow: inherit;
+  }
 
-.carousel:hover .carousel-control {
-  opacity: 1;
-  @include transition(all ease-in .5s);
-}
-
-.carousel-control.left, .carousel-control.right {
+  .carousel-control.left, .carousel-control.right {
     background-image: none;
+    color: #555;
+  }
+
+  .item-active, .item {
+    text-align: center;
+  }
+}
+
+
+.carousel-fade .carousel-inner {
+  .item {
+    opacity: 0;
+    transition-property: opacity;
+  }
+
+  .active {
+    opacity: 1;
+
+    &.left, &.right {
+      left: 0;
+      opacity: 0;
+      z-index: 1;
+    }
+  }
+
+  .next.left, .prev.right {
+    opacity: 1;
+  }
+}
+
+.carousel-fade .carousel-control {
+z-index: 2;
+}
+
+@media all and (transform-3D), (-webkit-transform-3D) {
+  .carousel-fade .carousel-inner > .item.next,
+  .carousel-fade .carousel-inner > .item.active.right {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+  .carousel-fade .carousel-inner > .item.prev,
+  .carousel-fade .carousel-inner > .item.active.left {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+  .carousel-fade .carousel-inner > .item.next.left,
+  .carousel-fade .carousel-inner > .item.prev.right,
+  .carousel-fade .carousel-inner > .item.active {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
 }
