--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -6,6 +6,11 @@
 	-moz-transition: height 0.3s;
 	transition: height 0.3s;
 
+  @include desktop-and-under {
+    height: auto;
+    padding-bottom: 15px;
+  }
+
   a {
     font: 600 .9em/80px $mainFont;
     text-transform: uppercase;
@@ -26,17 +31,21 @@
 
   li {
     padding: 0 15px;
+
+    @include desktop-and-under {
+      padding: 0 30px;
+    }
   }
 
   .nav-social {
     font-size: 1.6em;
-    color: #111;
+    color: $dark-gray;
     line-height: 80px;
     @include transition(all ease-out .5s);
     padding: 15px 5px;
 
     &:hover {
-      color: #929292;
+      color: $gray;
     }
   }
 
@@ -44,6 +53,10 @@
     width: 130px;
     height: auto;
     float: left;
+
+    @include desktop-and-under {
+      width: 85px;
+    }
   }
 }
 
@@ -57,6 +70,11 @@
 
 #caucinav.caucinav-shrink {
 	height: 80px;
+  // background-color: #fafafa;
+
+  @include desktop-and-under {
+    height: auto;
+  }
 }
 
 #caucinav.caucinav-shrink a,
@@ -77,11 +95,36 @@
 }
 
 #caucinav.caucinav-shrink .navbar-brand img {
-	width: 90px;
+	width: 85px;
+}
+
+#caucinav a, #caucinav.caucinav-shrink a {
+  @include desktop-and-under {
+    font-size: .9em;
+    line-height: normal;
+  }
+}
+
+#caucinav .nav-social, #caucinav.caucinav-shrink .nav-social {
+  @include desktop-and-under {
+    font-size: 1.5em;
+    text-align: center;
+    line-height: normal;
+    display: inline-block;
+    float: left;
+    padding: 15px 10px;
+  }
+}
+
+.navbar-right {
+  @include desktop-and-under {
+    width: 200px;
+    margin: auto;
+  }
 }
 
 .navlink {
-	color: #111;
+	color: $dark-gray;
   text-align: center;
 	-webkit-transition: color 0.3s;
 	transition: color 0.3s;
@@ -97,7 +140,7 @@
   &:hover, &:focus {
   	outline: none;
     text-decoration: none;
-    color: #929292;
+    color: $gray;
   }
 
   &::before {
@@ -107,16 +150,21 @@
   	left: 0;
   	width: 100%;
   	height: 2px;
-  	background: #929292;
+  	background: $gray;
   	-webkit-transform: scale3d(0, 1, 1);
   	transform: scale3d(0, 1, 1);
   	-webkit-transition: -webkit-transform 0.1s;
   	transition: transform 0.1s;
+
+    @include desktop-and-under {
+      height: 0;
+      background: transparent;
+    }
   }
 }
 
 .navlink-active .navlink {
-	color: #929292;
+	color: $gray;
 
   &::before {
     -webkit-transform: scale3d(1, 1, 1);
@@ -125,5 +173,15 @@
   	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   	-webkit-transition-duration: 0.3s;
   	transition-duration: 0.3s;
+  }
+}
+
+
+.navbar-toggle {
+  border: 1px solid $dark-gray;
+  margin: 20px 20px 8px 0;
+
+  .icon-bar {
+    background-color: $gray;
   }
 }
