--- a/scss/_events.scss
+++ b/scss/_events.scss
@@ -12,41 +12,16 @@
   width: 200px;
   height: 450px;
   object-fit: cover;
-  -webkit-filter: grayscale(.5);
-  filter: grayscale(.5);
-
-  &:hover {
-    -webkit-filter: grayscale(0);
-    filter: grayscale(0);
-    @include transition(all .3s ease);
-  }
-}
-
-.event-up {
-  display: inline-block;
-
-  span {
-    position: relative;
-    bottom: 150px;
-    width: 200px;
-    z-index: 100;
-  }
 }
 
 .event-down {
-  display: inline-block;
   position: relative;
   top: 50px;
-
-  span {
-    position: relative;
-    bottom: 420px;
-    width: 200px;
-    z-index: 100;
-  }
 }
 
 .event-up, .event-down {
+  display: inline-block;
+
   h1 {
     color: #fff;
   }
@@ -55,4 +30,137 @@
     top: 20px;
     font-size: 1.2em;
   }
+
+  span {
+    position: relative;
+    z-index: 100;
+  }
+}
+
+
+
+
+.grid {
+	position: relative;
+	clear: both;
+	margin: 0 auto;
+	padding: 1em 0 4em;
+	max-width: 1000px;
+	list-style: none;
+	text-align: center;
+}
+
+/* Common style */
+.grid figure {
+	position: relative;
+	float: left;
+	overflow: hidden;
+	height: auto;
+	text-align: center;
+	cursor: pointer;
+}
+
+.grid figure img {
+	position: relative;
+	display: block;
+	opacity: 0.8;
+}
+
+.grid figure figcaption {
+	padding: 2em;
+	color: #fff;
+	font-size: 1.25em;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+
+.grid figure figcaption::before,
+.grid figure figcaption::after {
+	pointer-events: none;
+}
+
+.grid figure figcaption,
+.grid figure figcaption > a {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+/* Anchor will cover the whole item by default */
+/* For some effects it will show as a button */
+.grid figure figcaption > a {
+	z-index: 1000;
+	text-indent: 200%;
+	white-space: nowrap;
+	font-size: 0;
+	opacity: 0;
+}
+
+.grid figure h2 {
+	word-spacing: -0.15em;
+	font-weight: 300;
+}
+
+.grid figure h2 span {
+	font-weight: 800;
+}
+
+.grid figure h2,
+.grid figure p {
+	margin: 0;
+}
+
+.grid figure p {
+	letter-spacing: 1px;
+	font-size: 68.5%;
+}
+
+
+
+figure.effect-events-hover {
+	background: $light-gray;
+
+  &:hover img {
+    -webkit-filter: grayscale(0);
+    filter: grayscale(0);
+    @include transition(all .3s ease);
+  }
+}
+
+figure.effect-events-hover img,
+figure.effect-events-hover h2 {
+	-webkit-transition: -webkit-transform 0.35s;
+	transition: transform 0.35s;
+}
+
+figure.effect-events-hover img {
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+  -webkit-filter: grayscale(.5);
+  filter: grayscale(.5);
+}
+
+figure.effect-events-hover p {
+  background-color: $dark-gray;
+  font: .75em $titleFont;
+  padding: 1em;
+	text-transform: none;
+	opacity: 0;
+	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+	transition: opacity 0.35s, transform 0.35s;
+	-webkit-transform: translate3d(0,50px,0);
+	transform: translate3d(0,50px,0);
+}
+
+figure.effect-events-hover:hover h2 {
+	-webkit-transform: translate3d(0,-100px,0);
+	transform: translate3d(0,-100px,0);
+}
+
+figure.effect-events-hover:hover p {
+	opacity: 1;
+	-webkit-transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);
 }
