--- a/scss/_frontpage.scss
+++ b/scss/_frontpage.scss
@@ -92,7 +92,7 @@
 }
 
 #about {
-  background-color: #e0ecee;
+  background-color: $light-blue;
   height: 500px;
   width: 100%;
   margin-top: 50px;
