--- a/scss/_constituents.scss
+++ b/scss/_constituents.scss
@@ -8,167 +8,158 @@
     text-transform: uppercase;
   }
 
-  a {
-    margin: 2em;
-    padding: 1em;
+  p {
+    padding: 0 15px 10px;
+    font-size: .9em;
+    line-height: 1.5em;
+
+    @include tablet {
+      text-align: left;
+      padding: 20px 10px 10px 0;
+    }
   }
 
   .fa {
     font-size: .7em;
     padding-left: .4em;
   }
-}
 
-.const-logo {
-  width: auto;
-  max-height: 60px;
+  .const-logo {
+    width: auto;
+    max-height: 60px;
+    margin-bottom: 15px;
+  }
+
+  .col-md-6 {
+    padding-bottom: 40px;
+  }
 }
 
 .const-grid {
 	position: relative;
 	margin: 0 auto;
-	padding: 1em 0 4em;
+	padding: 1em 0 .4em;
 	max-width: 1000px;
 	list-style: none;
 	text-align: center;
+
+  figure {
+  	position: relative;
+  	float: left;
+  	overflow: hidden;
+  	margin: 10px 1% 20px 1%;
+  	max-width: 480px;
+  	max-height: 475px;
+  	background: $dark-gray;
+  	text-align: center;
+  	cursor: pointer;
+
+    @include tablet {
+      margin-right: 30px;
+    }
+
+    img {
+    	position: relative;
+    	display: block;
+    	min-height: 100%;
+    	max-width: 100%;
+    	opacity: 0.8;
+    }
+
+    figcaption {
+    	padding: 2em;
+    	color: #fff;
+    	font-size: 1.25em;
+    	-webkit-backface-visibility: hidden;
+    	backface-visibility: hidden;
+    }
+
+    figcaption, figcaption > a {
+      position: absolute;
+    	top: 0;
+    	left: 0;
+    	width: 100%;
+    	height: 100%;
+    }
+
+    h2 {
+    	word-spacing: -0.15em;
+
+      span {
+      	font-weight: 800;
+      }
+    }
+
+    h2, p {
+      margin: 0;
+    }
+  }
 }
 
-/* Common style */
-.const-grid figure {
-	position: relative;
-	float: left;
-	overflow: hidden;
-	margin: 10px 1% 20px 1%;
-	max-width: 480px;
-	max-height: 475px;
-	background: $dark-gray;
-	text-align: center;
-	cursor: pointer;
-}
-
-.const-grid figure img {
-	position: relative;
-	display: block;
-	min-height: 100%;
-	max-width: 100%;
-	opacity: 0.8;
-}
-
-.const-grid figure figcaption {
-	padding: 2em;
-	color: #fff;
-	font-size: 1.25em;
-	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
-}
-
-.const-grid figure figcaption::before,
-.const-grid figure figcaption::after {
-	pointer-events: none;
-}
-
-.const-grid figure figcaption,
-.const-grid figure figcaption > a {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-
-/* Anchor will cover the whole item by default */
-/* For some effects it will show as a button */
-.const-grid figure figcaption > a {
-	z-index: 1000;
-	text-indent: 200%;
-	white-space: nowrap;
-	font-size: 0;
-	opacity: 0;
-}
-
-.const-grid figure h2 {
-	word-spacing: -0.15em;
-	font-weight: 300;
-}
-
-.const-grid figure h2 span {
-	font-weight: 800;
-}
-
-.const-grid figure h2,
-.const-grid figure p {
-	margin: 0;
-}
-
-.const-grid figure p {
-	font-size: 80%;
-  line-height: 1.5em;
-}
-
-
-
-figure.effect-sarah {
+figure.const-hover {
 	background-color: $dark-gray;
-}
 
-figure.effect-sarah img {
-	max-width: none;
-	width: -webkit-calc(100% + 20px);
-	width: calc(100% + 20px);
-	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-	transition: opacity 0.35s, transform 0.35s;
-	-webkit-transform: translate3d(-10px,0,0);
-	transform: translate3d(-10px,0,0);
-	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
-}
+  img {
+  	max-width: none;
+  	width: -webkit-calc(100% + 20px);
+  	width: calc(100% + 20px);
+  	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  	transition: opacity 0.35s, transform 0.35s;
+  	-webkit-transform: translate3d(-10px,0,0);
+  	transform: translate3d(-10px,0,0);
+  	-webkit-backface-visibility: hidden;
+  	backface-visibility: hidden;
+  }
 
-figure.effect-sarah:hover img {
-	opacity: 0.4;
-	-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
-}
+  figcaption {
+    text-align: left;
+  }
 
-figure.effect-sarah figcaption {
-	text-align: left;
-}
+  h2 {
+    position: relative;
+  	overflow: hidden;
+  	padding: 0.5em 0;
 
-figure.effect-sarah h2 {
-	position: relative;
-	overflow: hidden;
-	padding: 0.5em 0;
-}
+    &::after {
+      position: absolute;
+    	bottom: 0;
+    	left: 0;
+    	width: 100%;
+    	height: 3px;
+    	background: #fff;
+    	content: '';
+    	-webkit-transition: -webkit-transform 0.35s;
+    	transition: transform 0.35s;
+    	-webkit-transform: translate3d(-100%,0,0);
+    	transform: translate3d(-100%,0,0);
+    }
+  }
 
-figure.effect-sarah h2::after {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 3px;
-	background: #fff;
-	content: '';
-	-webkit-transition: -webkit-transform 0.35s;
-	transition: transform 0.35s;
-	-webkit-transform: translate3d(-100%,0,0);
-	transform: translate3d(-100%,0,0);
-}
+  // p {
+  // 	padding: 1em 0;
+  // 	opacity: 0;
+  // 	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  // 	transition: opacity 0.35s, transform 0.35s;
+  // 	-webkit-transform: translate3d(100%,0,0);
+  // 	transform: translate3d(100%,0,0);
+  // }
 
-figure.effect-sarah:hover h2::after {
-	-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
-}
+  &:hover {
+    img {
+    	opacity: 0.4;
+    	-webkit-transform: translate3d(0,0,0);
+    	transform: translate3d(0,0,0);
+    }
 
-figure.effect-sarah p {
-	padding: 1em 0;
-	opacity: 0;
-	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-	transition: opacity 0.35s, transform 0.35s;
-	-webkit-transform: translate3d(100%,0,0);
-	transform: translate3d(100%,0,0);
-}
+    h2::after {
+    	-webkit-transform: translate3d(0,0,0);
+    	transform: translate3d(0,0,0);
+    }
 
-figure.effect-sarah:hover p {
-	opacity: 1;
-	-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
+    // p {
+    // 	opacity: 1;
+    // 	-webkit-transform: translate3d(0,0,0);
+    // 	transform: translate3d(0,0,0);
+    // }
+  }
 }
