--- a/scss/_events.scss
+++ b/scss/_events.scss
@@ -2,14 +2,10 @@
   width: 100%;
   padding-top: 110px;
   text-align: center;
-
-  h2 {
-    padding-bottom: 15px;
-  }
 }
 
 .img-event {
-  width: 200px;
+  width: 100%;
   height: 450px;
   object-fit: cover;
 }
@@ -25,10 +21,16 @@
   h1 {
     color: #fff;
   }
+
   h2 {
     position: relative;
     top: 20px;
     font-size: 1.2em;
+    padding-bottom: 15px;
+
+    @include phone {
+      font-size: 1em;
+    }
   }
 
   span {
@@ -41,6 +43,7 @@
 
 
 .events-grid {
+  width: 15%;
 	position: relative;
 	clear: both;
 	margin: 0 auto;
@@ -73,6 +76,10 @@
     	font-size: 1.25em;
     	-webkit-backface-visibility: hidden;
     	backface-visibility: hidden;
+
+      @include desktop-and-under {
+        padding: 2em 0;
+      }
 
       &::before, &::after {
         pointer-events: none;
@@ -152,6 +159,10 @@ figure.effect-events-hover p {
 	transition: opacity 0.35s, transform 0.35s;
 	-webkit-transform: translate3d(0,50px,0);
 	transform: translate3d(0,50px,0);
+
+  @include phone {
+    font-size: .6em;
+  }
 }
 
 figure.effect-events-hover:hover h2 {
