--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,6 +2,11 @@
   text-align: center;
   padding: 30px 0;
 
+  @include  desktop-and-under {
+    padding: 30px;
+    line-height: 1.5em;
+  }
+
   .fa {
     font-size: 1.6em;
     color: #929292;
@@ -19,5 +24,9 @@
 
   .fa-facebook {
     padding-left: 0;
+
+    @include phone {
+      padding-left: 20px;
+    }
   }
 }
