--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -30,8 +30,7 @@ a {
 }
 
 .container a, .modal-content a {
-  &:hover:not(.buttonlink), &:focus:not(.buttonlink),
-  &:hover:not(.board-hover-link), &:focus:not(.board-hover-link) {
+  &:hover:not(.buttonlink):not(.board-hover-link), &:focus:not(.buttonlink):not(.board-hover-link) {
     color: $black;
     position: relative;
     bottom: 1px;
